--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "cropper": "^4.1.0",
     "echarts": "^5.3.1",
     "element-tiptap": "^1.27.1",
     "element-ui": "^2.15.6",
